<resources>
    <string name="app_name" translatable="false">Scheduler</string>
    <string name="action_settings">Settings</string>
    <string-array name="types_of_frequency">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="monthes_short">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>Jule</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!--WELCOME SLIDE-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to the Scheduler!</string>
    <string name="slide_1_desc">Ideal app for creating and scheduling tasks!</string>

    <string name="slide_2_title">Functional</string>
    <string name="slide_2_desc">Scheduler has all necessary functional, that must be in such app, exactly it is managing your tasks. You may add new tasks, postpone, delete and edit them. </string>

    <string name="slide_3_title">Timer</string>
    <string name="slide_3_desc">There is also the timer, that helps you to split your time into approaches. Scientists have proved that optimal time of approach for all kind of works is 25 minutes.</string>

    <string name="slide_4_title">Short instruction</string>
    <string name="slide_4_desc">If you swipe left to right, you will make your task done, if you swipe right to left, you will postpone the task. \n If you click on the task you will see detailed information about it. On this page you also make note done, postpone it. In addition, you can edit or completely delete the task. There is also a timer there.  </string>

    <string name="checkbox">Done</string>

    <!-- ADD NOTE -->
    <string name="hint_name_et">Name</string>
    <string name="hint_description_et">Description</string>
    <string name="hint_category_et">Category</string>
    <string name="hint_date_et">Date</string>
    <string name="hint_time_et">Time</string>
    <string name="hint_dayOfWeek">Day of Week</string>
    <string name="hint_priority">Priority</string>
    <string name="text_addButton">ADD</string>
    <string name="text_saveButton">SAVE</string>
    <string name="text_addDailyButton">ADD DAILY NOTE</string>
    <string name="text_addWeeklyButton">ADD WEEKLY NOTE</string>
    <string name="text_addMonthlyButton">ADD MONTHLY NOTE</string>

    <!--LATER-->
    <string name="titleLater">Later</string>
    <string name="titleDone">Done</string>
    <string name="today">Today</string>
    <string name="week">This week</string>
    <string name="month">This month</string>

    <!-- MAIN -->
    <string name="dailyTab">Daily</string>
    <string name="weeklyTab">Weekly</string>
    <string name="monthlyTab">Monthly</string>
    <string name="greetings">Good Morning!!</string>
    <string name="todayBIG">TODAY</string>
    <string name="completedTitle">Completed: </string>
    <string name="mondayShort">MON</string>
    <string name="tuesdayShort">TUE</string>
    <string name="wednesdayShort">WED</string>
    <string name="thursdayShort">THU</string>
    <string name="fridayShort">FRI</string>
    <string name="saturdayShort">SAT</string>
    <string name="sundayShort">SUN</string>

    <string name="undo_action">UNDO </string>
    <string name="done_action">Done: </string>
    <string name="postponed_action">Postponed: </string>

    <!-- ONE NODE-->
    <string name="doneSwipe">Done</string>
    <string name="laterSwipe">Later</string>
    <string name="startText">Start</string>
    <string name="category">Category: </string>
    <string name="laterStatus">Status: Later</string>
    <string name="doneStatus">Status: Done</string>
    <string name="toBeDoneStatus">Status: To be Done</string>
    <string name="cancel">Cancel</string>
    <string name="question">Are you sure do you want to delete this note?</string>
    <string name="confirm">Confirm</string>


    <!-- SETTINGS -->
    <string name="nightMode">Night Mode</string>

    <!--MENU-->
    <string name="home_manu">Home</string>
    <string name="done_menu">Done</string>
    <string name="later_menu">Later</string>
    <string name="settings_menu">Settings</string>

    <!--PRIORITY-->
    <string name="prior_normal">normal</string>
    <string name="prior_important">important</string>
    <string name="prior_very_important">very important</string>
    <string name="prior_extremely_important">extremely important</string>
    <string name="statistics_menu">Statistic</string>
</resources>
