<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/home_manu" />
        <item
            android:id="@+id/nav_done"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/done_menu" />
        <item
            android:id="@+id/nav_later"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/later_menu" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings_menu" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/stat"
            android:title="@string/statistics_menu" />
    </group>
</menu>