<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">


    <RelativeLayout
        android:id="@+id/block"
        android:layout_below="@id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/greetings"
            android:textColor="?attr/blackText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="monospace"
            android:text="@string/todayBIG"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDateToday"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/blackText"
            android:text="13 Mar, 2108"
            android:textSize="30sp"/>
        <RelativeLayout
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textColor="?attr/blackText"
                android:text="@string/completedTitle" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/textViewCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/paleGreen"
                    android:text="4/" />
                <TextView
                    android:id="@+id/textViewAll"
                    android:layout_toEndOf="@id/textViewCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/paleRed"
                    android:text="10" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/block" />

</RelativeLayout>
